# chafka

./: .gitignore  Cargo.toml  LICENSE  README.md  example.avsc  example.toml
src/: decoder.rs  ingester.rs  lib.rs  main.rs  settings.rs
src/decoder/: avro.rs  example.rs  static_avro_example.rs  testavro.rs
src/ingester/: avro.rs  example.rs
src/ingesters/: example  ingester.rs
