[package]
name = "chafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
apache-avro = "0.16.0"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
clickhouse-rs = "1.1.0-alpha.1"
config = "0.14.0"
rdkafka = "0.36.2"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["time", "rt-multi-thread", "macros"] }
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["serde"] }
